# sf_examples

./: README.md  add_records.py  data.db  del_records.py  lista_dinamica  main.py  pyproject.toml
static/: styles.css
templates/: index.html
